--- a/src/main/resources/templates/board/register.html
+++ b/src/main/resources/templates/board/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <!-- 썸머노트  -->
     <!-- include libraries(jQuery, bootstrap) -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
